@@ -1,5 +1,6 @@
 === 0.5.6 2014-04-29
 
+* Remove company user params from company create call.
 * Added reset password method to V2 enterprise user.
 * Added company reactivate method to V2.
 * Fixed enterprise user create method.
